[#rel2033] Avoid error text overflowing in Apps

--- a/prewikka/views/aboutplugin/htdocs/css/aboutplugin.css
+++ b/prewikka/views/aboutplugin/htdocs/css/aboutplugin.css
@@ -24,3 +24,7 @@ tr.disabled-app {
     font-style: italic;
     color: gray;
 }
+
+.popover-content {
+    word-wrap: break-word;
+}
